syntax = "proto3";

import "embed_server.proto";

message InferenceReply{
    repeated int32 data = 1;
}

service InferenceServer{
    rpc Inference (EmbedRequest) returns (InferenceReply) {}
}
